# Oscilliscope

./: .gitmodules  CMakeLists.txt  PseudoCode.txt  README.md  TODO.md  TestCode.c
Examples/ADS704x/: CMakeLists.txt  main.c  main_dma.c  main_pio.c  test_pio.c
Examples/Overclock/: CMakeLists.txt  main.c
Examples/Power/: power-test.c
Examples/Seesaw/: CMakeLists.txt  main.c
lib/ADS704x/: ADS7043.md  CMakeLists.txt  ads7043.c  ads7043.h  ads704x_dma.c  ads704x_dma.h  ads704x_dma_presets.c  ads704x_pio.c  ads704x_pio.h  ads704x_pio.pio  ads704x_pio.pio.old  cs_out.pio  dma_test.c
lib/Overclock/: CMakeLists.txt  overclock.h
lib/Seesaw/: CMakeLists.txt  Seesaw-Protocol.MD  seesaw.c  seesaw.h
lib/ws2812/: CMakeLists.txt  ws2812.c
src/: CMakeLists.txt  linker.ld  main.c  mcp4728.c  mcp4728.h  pins.h  src_seesaw.h  testing.h
